ncc/testsuite/positive/Issue-git-0072.n
module M
{
  Main() : void 
  {
    def foo[T]()
    { 
        def bar[S](_x : S, _y : T) where S : T
        {
        }
        
        bar
    }
    
    _ = foo();
  }
}