ncc/testsuite/negative/where-constraints6.n
class ExpectClass [T] where T : class  { }

_ = ExpectClass.[int] (); // E:  expected 'reference type', got int in generic specifier
